--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -72,7 +72,7 @@
 
   <!-- TABLE 2: User Agent - part of screen.js-->
   <table id="tb2">
-    <col width="35%"><a name="useragent"></a><col width="65%">
+    <col width="37%"><a name="useragent"></a><col width="63%">
     <thead><tr><th colspan="2">
       <div class="nav-title"><a href="#useragent">User Agent</a>
         <div class="nav-up"><a href="#screen">&#9650;</a></div>
@@ -129,7 +129,7 @@
 
   <!-- TABLE 3: Math - part of screen.js-->
   <table id="tb3">
-    <col width="35%"><a name="math"></a><col width="65%">
+    <col width="37%"><a name="math"></a><col width="63%">
     <thead><tr><th colspan="2">
         <div class="nav-title"><a href="#math">Math</a>
         <div class="nav-up"><a href="#useragent">&#9650;</a></div>
@@ -162,7 +162,7 @@
 
   <!-- TABLE 4:  Language & Locale / Time Zone & Date Format / Geolocation - language.js -->
   <table id="tb4">
-    <col width="35%"><a name="language"></a><col width="65%">
+    <col width="37%"><a name="language"></a><col width="63%">
     <thead><tr><th colspan="2">
       <div class="nav-title"><a href="#language">Language & Locale / Time Zone & Date Format / Geolocation</a>
         <div class="nav-up"><a href="#math">&#9650;</a></div>
@@ -273,7 +273,7 @@
 
   <!-- TABLE 8: Canvas - canvas.js -->
   <table id="tb8">
-    <col width="25%"><a name="canvas"></a><col width="75%">
+    <col width="37%"><a name="canvas"></a><col width="63%">
     <thead><tr><th colspan="2">
         <div class="nav-title"><a href="#canvas">Canvas</a>
         <div class="nav-up"><a href="#devices">&#9650;</a></div>
@@ -298,105 +298,64 @@
   <!-- TABLE 9: DOMRect - domrect.js -->
   <iframe id="iframeDR" style='position: absolute; top: -2000%;'></iframe>
   <table id="tb9">
-    <col width="17%"><a name="domrect"></a><col width="23%"><col width="23%"><col width="37%">
-    <thead><tr><th colspan="4">
+    <col width="7%"><a name="domrect"></a><col width="15%"><col width="15%"><col width="15%"><col width="15%"><col width="15%"><col width="18%">
+    <thead><tr><th colspan="7">
         <div class="nav-title"><a href="#domrect">DOMRect</a>
         <div class="nav-up"><a href="#canvas">&#9650;</a></div>
         <div class="nav-down"><a href="#fonts">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td colspan="2">Element.getClientRects</td><td colspan="2" id="dr1"></td></tr>
-    <tr><td colspan="2">Element.getBoundingClientRect</td><td colspan="2" id="dr2"></td></tr>
-    <tr><td colspan="2">Range.getClientRects</td><td colspan="2" id="dr3"></td></tr>
-    <tr><td colspan="2">Range.getBoundingClientRect</td><td colspan="2" id="dr4"></td></tr>
-    <tr><td colspan="4"></td></tr>
-    <tr><td colspan="4" class="center"><a target="_blank" class="blue" href="iframes/domrect.html">click here to view what is being rendered</a></td></tr>
-    <tr><td colspan="4" class="showhide">
+    <tr><td colspan="3">Element.getClientRects</td><td colspan="4" id="dr1"></td></tr>
+    <tr><td colspan="3">Element.getBoundingClientRect</td><td colspan="4" id="dr2"></td></tr>
+    <tr><td colspan="3">Range.getClientRects</td><td colspan="4" id="dr3"></td></tr>
+    <tr><td colspan="3">Range.getBoundingClientRect</td><td colspan="4" id="dr4"></td></tr>
+    <tr><td colspan="7"></td></tr>
+    <tr><td colspan="7" class="center"><a target="_blank" class="blue" href="iframes/domrect.html">click here to view what is being rendered</a></td></tr>
+    <tr><td colspan="7" class="showhide">
         <input id="collapseD" class="toggle" type="checkbox" checked onchange="toggleitems(this, `D`)"/>
         <label for="collapseD" class="lbl-toggle" id="labelD">&#9660; show details</label>
     </td></tr>
-    <tr class="togD"><td></td><td>[ *browserleaks* ]</td><td>[ *getClientRects* ]</td><td>[ Fingerprinting? ]</td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Element.getClientRects</td></tr>
-      <tr class="togD"><td>x</td><td id="dr11"></td><td id="dr12"></td><td id="dr13"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr17"></td><td id="dr18"></td><td id="dr19"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr113"></td><td id="dr114"></td><td id="dr115"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr119"></td><td id="dr120"></td><td id="dr121"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr125"></td><td id="dr126"></td><td id="dr127"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr131"></td><td id="dr132"></td><td id="dr133"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr137"></td><td id="dr138"></td><td id="dr139"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr143"></td><td id="dr144"></td><td id="dr145"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Element.getBoundingClientRect</td></tr>
-      <tr class="togD"><td>x</td><td id="dr21"></td><td id="dr22"></td><td id="dr23"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr27"></td><td id="dr28"></td><td id="dr29"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr213"></td><td id="dr214"></td><td id="dr215"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr219"></td><td id="dr220"></td><td id="dr221"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr225"></td><td id="dr226"></td><td id="dr227"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr231"></td><td id="dr232"></td><td id="dr233"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr237"></td><td id="dr238"></td><td id="dr239"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr243"></td><td id="dr244"></td><td id="dr245"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Range.getClientRects</td></tr>
-      <tr class="togD"><td>x</td><td id="dr31"></td><td id="dr32"></td><td id="dr33"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr37"></td><td id="dr38"></td><td id="dr39"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr313"></td><td id="dr314"></td><td id="dr315"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr319"></td><td id="dr320"></td><td id="dr321"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr325"></td><td id="dr326"></td><td id="dr327"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr331"></td><td id="dr332"></td><td id="dr333"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr337"></td><td id="dr338"></td><td id="dr339"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr343"></td><td id="dr344"></td><td id="dr345"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Range.getBoundingClientRect</td></tr>
-      <tr class="togD"><td>x</td><td id="dr41"></td><td id="dr42"></td><td id="dr43"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr47"></td><td id="dr48"></td><td id="dr49"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr413"></td><td id="dr414"></td><td id="dr415"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr419"></td><td id="dr420"></td><td id="dr421"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr425"></td><td id="dr426"></td><td id="dr427"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr431"></td><td id="dr432"></td><td id="dr433"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr437"></td><td id="dr438"></td><td id="dr439"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr443"></td><td id="dr444"></td><td id="dr445"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td>[ select ]</td><td>[ progress bar ]</td><td>[ empty button ]</td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Element.getClientRects</td></tr>
-      <tr class="togD"><td>x</td><td id="dr14"></td><td id="dr15"></td><td id="dr16"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr110"></td><td id="dr111"></td><td id="dr112"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr116"></td><td id="dr117"></td><td id="dr118"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr122"></td><td id="dr123"></td><td id="dr124"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr128"></td><td id="dr129"></td><td id="dr130"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr134"></td><td id="dr135"></td><td id="dr136"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr140"></td><td id="dr141"></td><td id="dr142"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr146"></td><td id="dr147"></td><td id="dr148"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Element.getBoundingClientRect</td></tr>
-      <tr class="togD"><td>x</td><td id="dr24"></td><td id="dr25"></td><td id="dr26"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr210"></td><td id="dr211"></td><td id="dr212"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr216"></td><td id="dr217"></td><td id="dr218"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr222"></td><td id="dr223"></td><td id="dr224"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr228"></td><td id="dr229"></td><td id="dr230"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr234"></td><td id="dr235"></td><td id="dr236"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr240"></td><td id="dr241"></td><td id="dr242"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr246"></td><td id="dr247"></td><td id="dr248"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Range.getClientRects</td></tr>
-      <tr class="togD"><td>x</td><td id="dr34"></td><td id="dr35"></td><td id="dr36"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr310"></td><td id="dr311"></td><td id="dr312"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr316"></td><td id="dr317"></td><td id="dr318"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr322"></td><td id="dr323"></td><td id="dr324"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr328"></td><td id="dr329"></td><td id="dr330"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr334"></td><td id="dr335"></td><td id="dr336"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr340"></td><td id="dr341"></td><td id="dr342"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr346"></td><td id="dr347"></td><td id="dr348"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr class="togD"><td></td><td colspan="3" class="sub9">Range.getBoundingClientRect</td></tr>
-      <tr class="togD"><td>x</td><td id="dr44"></td><td id="dr45"></td><td id="dr46"></td></tr>
-      <tr class="togD"><td>y</td><td id="dr410"></td><td id="dr411"></td><td id="dr412"></td></tr>
-      <tr class="togD"><td>width</td><td id="dr416"></td><td id="dr417"></td><td id="dr418"></td></tr>
-      <tr class="togD"><td>height</td><td id="dr422"></td><td id="dr423"></td><td id="dr424"></td></tr>
-      <tr class="togD"><td>top</td><td id="dr428"></td><td id="dr429"></td><td id="dr430"></td></tr>
-      <tr class="togD"><td>left</td><td id="dr434"></td><td id="dr435"></td><td id="dr436"></td></tr>
-      <tr class="togD"><td>right</td><td id="dr440"></td><td id="dr441"></td><td id="dr442"></td></tr>
-      <tr class="togD"><td>bottom</td><td id="dr446"></td><td id="dr447"></td><td id="dr448"></td></tr>
-      <tr class="togD"><td colspan="4"></td></tr>
-    <tr><td colspan="4"><span class="no_color">domrect code courtesy of </span>
+    <tr class="togD"><td></td><td>[ *browserleaks* ]</td><td>[ *getClientRects* ]</td><td>[ Fingerprinting? ]</td><td>[ select ]</td><td>[ progress bar ]</td><td>[ empty button ]</td></tr>
+    <tr class="togD"><td></td><td colspan="6" class="sub9">Element.getClientRects</td></tr>
+      <tr class="togD"><td>x</td><td id="dr11"></td><td id="dr12"></td><td id="dr13"></td><td id="dr14"></td><td id="dr15"></td><td id="dr16"></td></tr>
+      <tr class="togD"><td>y</td><td id="dr17"></td><td id="dr18"></td><td id="dr19"></td><td id="dr110"></td><td id="dr111"></td><td id="dr112"></tr>
+      <tr class="togD"><td>width</td><td id="dr113"></td><td id="dr114"></td><td id="dr115"></td><td id="dr116"></td><td id="dr117"></td><td id="dr118"></td></tr>
+      <tr class="togD"><td>height</td><td id="dr119"></td><td id="dr120"></td><td id="dr121"></td><td id="dr122"></td><td id="dr123"></td><td id="dr124"></td></tr>
+      <tr class="togD"><td>top</td><td id="dr125"></td><td id="dr126"></td><td id="dr127"></td><td id="dr128"></td><td id="dr129"></td><td id="dr130"></td></tr>
+      <tr class="togD"><td>left</td><td id="dr131"></td><td id="dr132"></td><td id="dr133"></td><td id="dr134"></td><td id="dr135"></td><td id="dr136"></td></tr>
+      <tr class="togD"><td>right</td><td id="dr137"></td><td id="dr138"></td><td id="dr139"></td><td id="dr140"></td><td id="dr141"></td><td id="dr142"></td></tr>
+      <tr class="togD"><td>bottom</td><td id="dr143"></td><td id="dr144"></td><td id="dr145"></td><td id="dr146"></td><td id="dr147"></td><td id="dr148"></td></tr>
+      <tr class="togD"><td colspan="7"></td></tr>
+    <tr class="togD"><td></td><td colspan="6" class="sub9">Element.getBoundingClientRect</td></tr>
+      <tr class="togD"><td>x</td><td id="dr21"></td><td id="dr22"></td><td id="dr23"></td><td id="dr24"></td><td id="dr25"></td><td id="dr26"></td></tr>
+      <tr class="togD"><td>y</td><td id="dr27"></td><td id="dr28"></td><td id="dr29"></td><td id="dr210"></td><td id="dr211"></td><td id="dr212"></td></tr>
+      <tr class="togD"><td>width</td><td id="dr213"></td><td id="dr214"></td><td id="dr215"></td><td id="dr216"></td><td id="dr217"></td><td id="dr218"></td></tr>
+      <tr class="togD"><td>height</td><td id="dr219"></td><td id="dr220"></td><td id="dr221"><td id="dr222"></td><td id="dr223"></td><td id="dr224"></td></td></tr>
+      <tr class="togD"><td>top</td><td id="dr225"></td><td id="dr226"></td><td id="dr227"></td><td id="dr228"></td><td id="dr229"></td><td id="dr230"></td></tr>
+      <tr class="togD"><td>left</td><td id="dr231"></td><td id="dr232"></td><td id="dr233"></td><td id="dr234"></td><td id="dr235"></td><td id="dr236"></td></tr>
+      <tr class="togD"><td>right</td><td id="dr237"></td><td id="dr238"></td><td id="dr239"></td><td id="dr240"></td><td id="dr241"></td><td id="dr242"></td></tr>
+      <tr class="togD"><td>bottom</td><td id="dr243"></td><td id="dr244"></td><td id="dr245"></td><td id="dr246"></td><td id="dr247"></td><td id="dr248"></td></tr>
+      <tr class="togD"><td colspan="7"></td></tr>
+    <tr class="togD"><td></td><td colspan="6" class="sub9">Range.getClientRects</td></tr>
+      <tr class="togD"><td>x</td><td id="dr31"></td><td id="dr32"></td><td id="dr33"></td><td id="dr34"></td><td id="dr35"></td><td id="dr36"></td></tr>
+      <tr class="togD"><td>y</td><td id="dr37"></td><td id="dr38"></td><td id="dr39"></td><td id="dr310"></td><td id="dr311"></td><td id="dr312"></td></tr>
+      <tr class="togD"><td>width</td><td id="dr313"></td><td id="dr314"></td><td id="dr315"></td><td id="dr316"></td><td id="dr317"></td><td id="dr318"></td></tr>
+      <tr class="togD"><td>height</td><td id="dr319"></td><td id="dr320"></td><td id="dr321"></td><td id="dr322"></td><td id="dr323"></td><td id="dr324"></td></tr>
+      <tr class="togD"><td>top</td><td id="dr325"></td><td id="dr326"></td><td id="dr327"></td><td id="dr328"></td><td id="dr329"></td><td id="dr330"></td></tr>
+      <tr class="togD"><td>left</td><td id="dr331"></td><td id="dr332"></td><td id="dr333"></td><td id="dr334"></td><td id="dr335"></td><td id="dr336"></td></tr>
+      <tr class="togD"><td>right</td><td id="dr337"></td><td id="dr338"></td><td id="dr339"></td><td id="dr340"></td><td id="dr341"></td><td id="dr342"></td></tr>
+      <tr class="togD"><td>bottom</td><td id="dr343"></td><td id="dr344"></td><td id="dr345"></td><td id="dr346"></td><td id="dr347"></td><td id="dr348"></td></tr>
+      <tr class="togD"><td colspan="7"></td></tr>
+    <tr class="togD"><td></td><td colspan="6" class="sub9">Range.getBoundingClientRect</td></tr>
+      <tr class="togD"><td>x</td><td id="dr41"></td><td id="dr42"></td><td id="dr43"></td><td id="dr44"></td><td id="dr45"></td><td id="dr46"></td></tr>
+      <tr class="togD"><td>y</td><td id="dr47"></td><td id="dr48"></td><td id="dr49"></td><td id="dr410"></td><td id="dr411"></td><td id="dr412"></td></tr>
+      <tr class="togD"><td>width</td><td id="dr413"></td><td id="dr414"></td><td id="dr415"></td><td id="dr416"></td><td id="dr417"></td><td id="dr418"></td></tr>
+      <tr class="togD"><td>height</td><td id="dr419"></td><td id="dr420"></td><td id="dr421"></td><td id="dr422"></td><td id="dr423"></td><td id="dr424"></td></tr>
+      <tr class="togD"><td>top</td><td id="dr425"></td><td id="dr426"></td><td id="dr427"></td><td id="dr428"></td><td id="dr429"></td><td id="dr430"></td></tr>
+      <tr class="togD"><td>left</td><td id="dr431"></td><td id="dr432"></td><td id="dr433"></td><td id="dr434"></td><td id="dr435"></td><td id="dr436"></td></tr>
+      <tr class="togD"><td>right</td><td id="dr437"></td><td id="dr438"></td><td id="dr439"></td><td id="dr440"></td><td id="dr441"></td><td id="dr442"></td></tr>
+      <tr class="togD"><td>bottom</td><td id="dr443"></td><td id="dr444"></td><td id="dr445"></td><td id="dr446"></td><td id="dr447"></td><td id="dr448"></td></tr>
+      <tr class="togD"><td colspan="7"></td></tr>
+    <tr><td colspan="7"><span class="no_color">domrect code courtesy of </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
   </table>
@@ -436,7 +395,7 @@
 
   <!-- TABLE 13: Audio - audio.js -->
   <table id="tb13">
-    <col width="40%"><a name="audio"></a><col width="60%">
+    <col width="37%"><a name="audio"></a><col width="63%">
     <thead><tr><th colspan="2">
         <div class="nav-title"><a href="#audio">Audio</a>
         <div class="nav-up"><a href="#media">&#9650;</a></div>
