--- a/math.html
+++ b/math.html
@@ -43,181 +43,198 @@
 
 function outputMath() {
 
-		let n = 0.123
-		let bigN = 5.860847362277284e+38
-		let fns = [
-			// [function, value, testnumber for easy reference, control
-			// control value is FF78 64bit on Windows7 64bit
-			['acos', [n], 0, 1.4474840516030247],
-			['acos', [Math.SQRT1_2], 1, 0.7853981633974483],
-			['acosh', [1e308], 2, 709.889355822726],
-			['acosh', [Math.PI], 3, 1.811526272460853],
-			['acosh', [Math.SQRT2], 4, 0.881373587019543],
-			['asin', [n], 5, 0.12331227519187199],
-			['asinh', [1e300], 6, 691.4686750787736],
-			['asinh', [Math.PI], 7, 1.8622957433108482],
-			['atan', [2], 8, 1.1071487177940904],
-			['atan', [Math.PI], 9, 1.2626272556789115],
-			['atanh', [0.5], 10, 0.5493061443340548],
-			['atan2', [1e-310, 2], 11, 5e-311],
-			['atan2', [Math.PI, 2], 12, 1.0038848218538872],
-			['cbrt', [100], 13, 4.641588833612779],
-			['cbrt', [Math.PI], 14, 1.4645918875615231],
-			['cos', [n], 15, 0.9924450321351935],
-			['cos', [Math.PI], 16, -1],
-			['cos', [bigN],17, -0.10868049424995659], // creep says unique in Tor
-			['cosh', [1],18, 1.5430806348152437],
-			['cosh', [Math.PI], 19, 11.591953275521519],
-			['expm1', [1],20, 1.718281828459045],
-			['expm1', [Math.PI], 21, 22.140692632779267],
-			['exp', [n], 22, 1.1308844209474893],
-			['exp', [Math.PI], 23, 23.140692632779267],
-			['hypot', [1, 2, 3, 4, 5, 6], 24, 9.539392014169456],
-			['hypot', [bigN, bigN], 25, 8.288489826731114e+38],
-			['log', [n], 26, -2.0955709236097197],
-			['log', [Math.PI], 27, 1.1447298858494002],
-			['log1p', [n], 28, 0.11600367575630613],
-			['log1p', [Math.PI], 29, 1.4210804127942926],
-			['log10', [n], 30, -0.9100948885606021],
-			['log10', [Math.PI], 31, 0.49714987269413385],
-			['log10', [Math.E], 32, 0.4342944819032518],
-			['log10', [Math.LN2], 33, -0.1591745389548616],
-			['log10', [Math.LOG2E], 34, 0.15917453895486158],
-			['log10', [Math.LOG10E], 35, -0.36221568869946325],
-			['log10', [Math.SQRT1_2], 36, -0.15051499783199057],
-			['log10', [Math.SQRT2], 37, 0.15051499783199063],
-			['sin', [bigN], 38, 0.994076732536068], // creep says unique in Tor
-			['sin', [Math.PI], 39, 1.2246467991473532e-16], // creep says unique in Tor
-			['sin', [Math.E], 40, 0.41078129050290885],
-			['sin', [Math.LN2], 41, 0.6389612763136348],
-			['sin', [Math.LOG2E], 42, 0.9918062443936637],
-			['sin', [Math.LOG10E], 43, 0.4207704833137573],
-			['sin', [Math.SQRT1_2], 44, 0.6496369390800625],
-			['sin', [Math.SQRT2], 45, 0.9877659459927356],
-			['sinh', [1], 46, 1.1752011936438014],
-			['sinh', [Math.PI], 47, 11.548739357257748],
-			['sinh', [Math.E], 48, 7.544137102816975],
-			['sinh', [Math.LN2], 49, 0.75],
-			['sinh', [Math.LOG2E], 50, 1.9978980091062795],
-			['sinh', [Math.LOG10E], 51, 0.44807597941469024],
-			['sinh', [Math.SQRT1_2], 52, 0.7675231451261164],
-			['sinh', [Math.SQRT2], 53, 1.935066822174357],
-			['sqrt', [n], 54, 0.3507135583350036],
-			['sqrt', [Math.PI], 55, 1.7724538509055159],
-			['tan', [-1e308], 56, 0.5086861259107568],
-			['tan', [Math.PI], 57, -1.2246467991473532e-16],
-			['tanh', [n], 58, 0.12238344189440875],
-			['tanh', [Math.PI], 59, 0.99627207622075],
-			['pow', [n, -100], 60, 1.0220893335845176e+91],
-			['pow', [Math.PI, -100], 61, 1.9275814160560185e-50],
-			['pow', [Math.E, -100], 62, 3.720075976020851e-44],
-			['pow', [Math.LN2, -100], 63, 8269017203802410],
-			['pow', [Math.LN10, -100], 64, 6.003867926738811e-37],
-			['pow', [Math.LOG2E, -100], 65, 1.2093335584550061e-16],
-			['pow', [Math.LOG10E, -100], 66, 1.665592934758592e+36],
-			['pow', [Math.SQRT1_2, -100], 67, 1125899906842611.5],
-			['pow', [Math.SQRT2, -100], 68, 8.881784197001154e-16]
-		]
-
-		// polyfills
-		let polyfills = [], result = "", control = ""
-		for(let i=0; i < fns.length; i++) {
-			result = "n/a", control = "n/a"
-			if (i == 10) {
-				result = Math.log((1.5) / (.5)) / 2 // atanh(0.5)
-				control = 0.5493061443340548
-			} else if (i == 20) {
-				result = Math.exp(1) - 1 // expm1(1)
-				control = 1.718281828459045
-			} else if (i == 46) {
-				result = ((Math.exp(1)) - 1 / (Math.exp(1))) / 2 // sinh(1)
-				control = 1.1752011936438014
-			}
-			polyfills.push(result +":" + control)
+	// hypot from https://github.com/MaxArt2501/es6-math/blob/master/es6-math.js	
+	function hypot(value1, value2) {
+		let i, n = 0, args = arguments, len = args.length
+		for (i = 0; i < len; i++) {
+			n += args[i] * args[i]
 		}
+		return Math.sqrt(n)
+	}
 
-		// build test results
-		let	math1 = [],	// functions
-			math2 = [], // polyfills
-			display = [],
-			numbers = [] // numbers which make a difference
+	let n = 0.123
+	let bigN = 5.860847362277284e+38
+	let fns = [
+		// [function, value, testnumber for easy reference, control
+		// control value is FF78 64bit on Windows7 64bit
+		['acos', [n], 0, 1.4474840516030247, "acos(n)"],
+		['acos', [Math.SQRT1_2], 1, 0.7853981633974483],
+		['acosh', [1e308], 2, 709.889355822726],
+		['acosh', [Math.PI], 3, 1.811526272460853],
+		['acosh', [Math.SQRT2], 4, 0.881373587019543],
+		['asin', [n], 5, 0.12331227519187199],
+		['asinh', [1e300], 6, 691.4686750787736],
+		['asinh', [Math.PI], 7, 1.8622957433108482],
+		['atan', [2], 8, 1.1071487177940904],
+		['atan', [Math.PI], 9, 1.2626272556789115],
+		['atanh', [0.5], 10, 0.5493061443340548],
+		['atan2', [1e-310, 2], 11, 5e-311],
+		['atan2', [Math.PI, 2], 12, 1.0038848218538872],
+		['cbrt', [100], 13, 4.641588833612779],
+		['cbrt', [Math.PI], 14, 1.4645918875615231],
+		['cos', [n], 15, 0.9924450321351935],
+		['cos', [Math.PI], 16, -1],
+		['cos', [bigN],17, -0.10868049424995659], // creep says unique in Tor
+		['cosh', [1],18, 1.5430806348152437],
+		['cosh', [Math.PI], 19, 11.591953275521519],
+		['expm1', [1],20, 1.718281828459045],
+		['expm1', [Math.PI], 21, 22.140692632779267],
+		['exp', [n], 22, 1.1308844209474893],
+		['exp', [Math.PI], 23, 23.140692632779267],
+		['hypot', [1, 2, 3, 4, 5, 6], 24, 9.539392014169456],
+		['hypot', [bigN, bigN], 25, 8.288489826731114e+38],
+		['log', [n], 26, -2.0955709236097197],
+		['log', [Math.PI], 27, 1.1447298858494002],
+		['log1p', [n], 28, 0.11600367575630613],
+		['log1p', [Math.PI], 29, 1.4210804127942926],
+		['log10', [n], 30, -0.9100948885606021],
+		['log10', [Math.PI], 31, 0.49714987269413385],
+		['log10', [Math.E], 32, 0.4342944819032518],
+		['log10', [Math.LN2], 33, -0.1591745389548616],
+		['log10', [Math.LOG2E], 34, 0.15917453895486158],
+		['log10', [Math.LOG10E], 35, -0.36221568869946325],
+		['log10', [Math.SQRT1_2], 36, -0.15051499783199057],
+		['log10', [Math.SQRT2], 37, 0.15051499783199063],
+		['sin', [bigN], 38, 0.994076732536068], // creep says unique in Tor
+		['sin', [Math.PI], 39, 1.2246467991473532e-16], // creep says unique in Tor
+		['sin', [Math.E], 40, 0.41078129050290885],
+		['sin', [Math.LN2], 41, 0.6389612763136348],
+		['sin', [Math.LOG2E], 42, 0.9918062443936637],
+		['sin', [Math.LOG10E], 43, 0.4207704833137573],
+		['sin', [Math.SQRT1_2], 44, 0.6496369390800625],
+		['sin', [Math.SQRT2], 45, 0.9877659459927356],
+		['sinh', [1], 46, 1.1752011936438014],
+		['sinh', [Math.PI], 47, 11.548739357257748],
+		['sinh', [Math.E], 48, 7.544137102816975],
+		['sinh', [Math.LN2], 49, 0.75],
+		['sinh', [Math.LOG2E], 50, 1.9978980091062795],
+		['sinh', [Math.LOG10E], 51, 0.44807597941469024],
+		['sinh', [Math.SQRT1_2], 52, 0.7675231451261164],
+		['sinh', [Math.SQRT2], 53, 1.935066822174357],
+		['sqrt', [n], 54, 0.3507135583350036],
+		['sqrt', [Math.PI], 55, 1.7724538509055159],
+		['tan', [-1e308], 56, 0.5086861259107568],
+		['tan', [Math.PI], 57, -1.2246467991473532e-16],
+		['tanh', [n], 58, 0.12238344189440875],
+		['tanh', [Math.PI], 59, 0.99627207622075],
+		['pow', [n, -100], 60, 1.0220893335845176e+91],
+		['pow', [Math.PI, -100], 61, 1.9275814160560185e-50],
+		['pow', [Math.E, -100], 62, 3.720075976020851e-44],
+		['pow', [Math.LN2, -100], 63, 8269017203802410],
+		['pow', [Math.LN10, -100], 64, 6.003867926738811e-37],
+		['pow', [Math.LOG2E, -100], 65, 1.2093335584550061e-16],
+		['pow', [Math.LOG10E, -100], 66, 1.665592934758592e+36],
+		['pow', [Math.SQRT1_2, -100], 67, 1125899906842611.5],
+		['pow', [Math.SQRT2, -100], 68, 8.881784197001154e-16]
+	]
 
-		let polymatch = [], fnmatch = [] // do not match control
-		let diffs = [] // fn + poly don't match
-
-		for(let i=0; i < fns.length; i++) {
-			let fn = fns[i]
-			let ipad = (i.toString()).padStart(2)
-			let fnResult = Math[fn[0]](...fn[1])
-				fnResult = fnResult.toString()
-			let fnControl = fn[3].toString()
-			let polyResult = polyfills[i].split(":")[0]
-			let polyControl = polyfills[i].split(":")[1]
-
-			// fn results
-			let isFnDiff = false, isPolyDiff = false
-			if (fnResult !== fnControl) {
-				isFnDiff = true
-				fnmatch.push(i+":"+fnControl +":"+fnResult)
-				numbers.push(i)
-			}
-			math1.push(i+":"+fnResult)
-
-			// poly results
-			if (polyResult !== "n/a") {
-				if (polyResult !== polyControl) {
-					isPolyDiff = true
-					polymatch.push(i+":"+polyControl +":"+polyResult)
-					numbers.push(i+"p")
-				}
-				math2.push(i+":"+polyResult)
-				// does not match fn
-				if (polyResult !== fnResult) {
-					diffs.push(i+":"+fnResult+":"+polyResult)
-					numbers.push(i+"p")
-				}
-			}
-			// display
-			if (isFnDiff) { fnResult = s1.trim() + fnResult + sc }
-			if (isPolyDiff) { polyResult = s1.trim() + polyResult + sc }
-			if (polyResult !== "n/a") {
-				fnResult += ", " + polyResult
-			}
-			display.push(ipad+": "+ fnResult)
+	// polyfills
+	let polyfills = [], res = "", ctl = ""
+	for(let i=0; i < fns.length; i++) {
+		res = "n/a", ctl = "n/a"
+		if (i == 10) {
+			res = Math.log((1.5) / (.5)) / 2 // atanh(0.5)
+			ctl = 0.5493061443340548
+		} else if (i == 20) {
+			res = Math.exp(1) - 1 // expm1(1)
+			ctl = 1.718281828459045
+		} else if (i == 21) {
+			res = Math.exp(Math.PI) - 1 // expm1(Math.PI)
+			ctl = 22.140692632779267
+		} else if (i == 25) {
+			res = hypot(bigN, bigN) // hypot(bigN, bigN)
+			ctl = 8.288489826731114e+38
+		} else if (i == 46) {
+			res = (Math.exp(1) - 1 / Math.exp(1)) / 2 // sinh(1)
+			ctl = 1.1752011936438014
+		} else if (i == 47) {
+			res = ((Math.exp(Math.PI) - 1 / Math.exp(Math.PI)) / 2) // sinh(Math.PI)
+			ctl = 11.548739357257748
 		}
-		let hash1 = sha1(math1.join())
-		let hash2 = sha1(math2.join())
-		let hash0 = sha1(hash1 + hash2)
-		dom.hash1.innerHTML = hash1 + s3 +"["+ math1.length +"]"+sc
-		dom.hash2.innerHTML = hash2 + s3 +"["+ math2.length +"]"+sc
-		dom.hash0.innerHTML = hash0 + s3 +"["+ (math1.length + math2.length) +"]"+sc
-		dom.mathdata.innerHTML = display.join("<br>")
+		polyfills.push(res +":" + ctl)
+	}
 
-		// useful numbers
-		numbers.sort((a,b) => a-b)
-		numbers = numbers.filter(function(item, position) {return numbers.indexOf(item) === position})
-		numbers.sort((a,b) => a-b)
-		dom.num = numbers.join(", ")
+	// build test results
+	let	math1 = [],	// functions
+		math2 = [], // polyfills
+		display = [],
+		numbers = [] // numbers which make a difference
+		let polymatch = [],
+		fnmatch = [], // do not match control
+		diffs = [] // fn + poly don't match
 
-		// does not match control
-		function output_diffs(array, type) {
-			let output = []
-			if (array.length > 0) {
-				for(let i=0; i < array.length; i++) {
-					let part0 = array[i].split(":")[0]
-						part0 = (part0.toString()).padStart(2)
-					let part1 = array[i].split(":")[1]
-					let part2 = array[i].split(":")[2]
-					output.push(part0 + ": expected " + sg + part1 + sc + " got " + s2 + part2 + sc)
-				}
-				document.getElementById("diff" + type).innerHTML = output.join("<br>")
-			} else {
-				document.getElementById("diff" + type).innerHTML = "they all match"
+	for(let i=0; i < fns.length; i++) {
+		let fn = fns[i]
+		let ipad = (i.toString()).padStart(2)
+		let fnResult = Math[fn[0]](...fn[1])
+			fnResult = fnResult.toString()
+		let fnControl = fn[3].toString()
+		let polyResult = polyfills[i].split(":")[0]
+		let polyControl = polyfills[i].split(":")[1]
+		// fn results
+		let isFnDiff = false, isPolyDiff = false
+		if (fnResult !== fnControl) {
+			isFnDiff = true
+			fnmatch.push(i+":"+fnControl +":"+fnResult)
+			numbers.push(i)
+		}
+		math1.push(i+":"+fnResult)
+		// poly results
+		if (polyResult !== "n/a") {
+			if (polyResult !== polyControl) {
+				isPolyDiff = true
+				polymatch.push(i+":"+polyControl +":"+polyResult)
+				numbers.push(i+"p")
+			}
+			math2.push(i+":"+polyResult)
+			// does not match fn
+			if (polyResult !== fnResult) {
+				diffs.push(i+":"+fnResult+":"+polyResult)
+				numbers.push(i+"p")
 			}
 		}
-		output_diffs(diffs, 0)
-		output_diffs(fnmatch, 1)
-		output_diffs(polymatch, 2)
+		// display
+		if (isFnDiff) { fnResult = s1.trim() + fnResult + sc }
+		if (isPolyDiff) { polyResult = s1.trim() + polyResult + sc }
+		if (polyResult !== "n/a") {
+			fnResult += ", " + polyResult
+		}
+		display.push(ipad+": "+ fnResult)
+	}
+
+	// hashes
+	let hash1 = sha1(math1.join())
+	let hash2 = sha1(math2.join())
+	let hash0 = sha1(hash1 + hash2)
+		//ToDo: assign short codes
+	dom.hash1.innerHTML = hash1 + s3 +"["+ math1.length +"]"+sc
+	dom.hash2.innerHTML = hash2 + s3 +"["+ math2.length +"]"+sc
+	dom.hash0.innerHTML = hash0 // ToDo: add [CODE] or [NEW]
+	dom.mathdata.innerHTML = display.join("<br>")
+	// numbers
+	numbers.sort((a,b) => a-b)
+	numbers = numbers.filter(function(item, position) {return numbers.indexOf(item) === position})
+	numbers.sort((a,b) => a-b)
+	dom.num = numbers.join(", ")
+	// diffs
+	function output_diffs(array, type) {
+		let output = []
+		if (array.length > 0) {
+			for(let i=0; i < array.length; i++) {
+				let part0 = array[i].split(":")[0]
+				part0 = (part0.toString()).padStart(2)
+				let part1 = array[i].split(":")[1]
+				let part2 = array[i].split(":")[2]
+				output.push(part0 + ": expected " + sg + part1 + sc + " got " + s2 + part2 + sc)
+			}
+			document.getElementById("diff" + type).innerHTML = output.join("<br>")
+		} else {
+			document.getElementById("diff" + type).innerHTML = "they all match"
+		}
+	}
+	output_diffs(diffs, 0)
+	output_diffs(fnmatch, 1)
+	output_diffs(polymatch, 2)
 
 }
 
